<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Pokéchu</string>

    <string name="placeholder_string" />
    <string name="placeholder_string_short" />

    <!-- Main activity -->
    <string name="pokemon_discovered" />
    <string name="pokemon_captured" />

    <!-- Main activity menu -->
    <string name="menu_main_search" />
    <string name="menu_main_list_view" />
    <string name="menu_main_grid_view" />
    <string name="menu_main_sort" />
    <string name="menu_main_customize" />
    <string name="menu_main_filter" />
    <string name="menu_main_settings" />
    <string name="menu_main_about" />
    <!-- Customize menu -->
    <string name="menu_main_show_undiscovered_info" />
    <string name="menu_main_show_discovered_only" />
    <string name="menu_main_show_captured_only" />

    <!-- Details activity -->
    <string name="national_id" />
    <string name="pokemon_id" />
    <string name="details_height" />
    <string name="details_meters_abbrev" />
    <string name="details_weight" />
    <string name="details_kilograms_abbrev" />
    <string name="details_types" />
    <string name="details_general_info" />
    <string name="details_evolution_tree" />

    <!-- Languages -->
    <string name="language_english" />
    <string name="language_french" />

    <!-- Settings activity -->
    <string name="title_activity_settings" translatable="false">@string/menu_main_settings</string>
    <string name="settings_general" />
    <string name="settings_night_mode" />
    <string name="settings_night_mode_off" />
    <string name="settings_night_mode_on" />
    <string name="settings_night_mode_system" />
    <string name="settings_language" />
    <string name="settings_app_language" />
    <string name="settings_data_language" />
    <string name="settings_data" />
    <string name="setting_clear_data" />

    <!-- Dialogs -->
    <string name="dialog_ok" />
    <string name="dialog_cancel" />
    <string name="dialog_yes" />
    <string name="dialog_no" />
    <string name="dialog_are_you_sure" />

    <!-- About activity -->
    <string name="title_activity_about" translatable="false">@string/menu_main_about</string>
    <string name="about_created_by" />
    <string name="about_version_name" />
    <string name="about_version_code" />
    <string name="about_build_date" />
    <string name="about_build_time" />
    <string name="about_thanks" />
    <string name="about_copyright" />

    <!-- Bottom sheet -->
    <string name="bottom_sheet_regions" />
    <string name="bottom_sheet_games" />
</resources>