<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_general">

        <ListPreference
            app:key="setting_night_mode"
            app:title="@string/settings_night_mode"
            app:entries="@array/night_mode_entries"
            app:entryValues="@array/night_mode_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_language">

        <ListPreference
            app:key="setting_app_language"
            app:title="@string/settings_app_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true"
            app:persistent="false"/> <!-- not persistent because handled by akexorcist:localization -->

        <ListPreference
            app:key="setting_data_language"
            app:title="@string/settings_data_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_data">

        <Preference
            app:key="setting_clear_data"
            app:title="@string/setting_clear_data" />

    </PreferenceCategory>

</PreferenceScreen>