<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_general">

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_language">

        <ListPreference
            app:key="setting_app_language"
            app:title="@string/settings_app_language"
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="setting_data_language"
            app:title="@string/settings_data_language"
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_data">

        <Preference
            app:key="setting_clear_data"
            app:title="@string/setting_clear_data" />

    </PreferenceCategory>

</PreferenceScreen>