<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.ActivityMain">

    <item android:id="@+id/search"
        android:title="@string/menu_main_search"
        android:icon="@drawable/outline_search_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/button_customize"
        android:title="@string/menu_main_customize"
        android:icon="@drawable/outline_tune_24"
        app:showAsAction="collapseActionView|always">
        <!-- A empty SubMenu -->
        <menu></menu>
    </item>
    <item android:id="@+id/button_list_view"
        android:title="@string/menu_main_list_view"
        android:icon="@drawable/outline_view_list_24"
        app:showAsAction="collapseActionView|always"/>
    <item android:id="@+id/button_grid_view"
        android:title="@string/menu_main_grid_view"
        android:icon="@drawable/outline_grid_view_24"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_main_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />
</menu>