<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityAbout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.Pokechu_Material3.AppBarOverlay"
            style="@style/Widget.MaterialComponents.Toolbar.Primary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-16dp">

            <ImageView
                android:layout_width="23dip"
                android:layout_height="23dip"
                android:layout_margin="@dimen/text_margin_very_small"
                app:srcCompat="@drawable/ic_pokeball" />

            <TextView
                android:id="@+id/text_app_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_very_small"
                android:text="@string/placeholder_string" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:text="@string/about_version_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:layout_marginRight="@dimen/text_margin_very_small"
                        android:text="@string/about_version_code" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:layout_marginRight="@dimen/text_margin_very_small"
                        android:text="@string/about_build_date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:layout_marginRight="@dimen/text_margin_very_small"
                        android:text="@string/about_build_time" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:text="@string/placeholder_string" />

                    <TextView
                        android:id="@+id/text_version_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:text="@string/placeholder_string" />

                    <TextView
                        android:id="@+id/text_build_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:text="@string/placeholder_string" />

                    <TextView
                        android:id="@+id/text_build_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:text="@string/placeholder_string" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="23dip"
                android:layout_height="23dip"
                android:layout_margin="@dimen/text_margin_very_small"
                app:srcCompat="@drawable/ic_pokeball" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_very_small"
                android:text="@string/about_created_by" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@" />

            <ImageView
                android:layout_width="100dip"
                android:layout_height="50dip"
                app:srcCompat="@drawable/ic_logo_amazer" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>