<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ActivityDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.Pokechu_Material3.AppBarOverlay"
            style="@style/Widget.MaterialComponents.Toolbar.Primary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom|right"
                    android:orientation="vertical"
                    android:padding="10dip">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_height"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />
                        <TextView
                            android:id="@+id/text_height_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/text_margin_very_small"
                            android:text="@string/placeholder_string_short" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_meters_abbrev" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_weight"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />
                        <TextView
                            android:id="@+id/text_weight_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/text_margin_very_small"
                            android:text="@string/placeholder_string_short" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_kilograms_abbrev" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/types_image_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_very_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_types"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=": " />

                        <!--                        <ImageView-->
                        <!--                            android:layout_width="25dip"-->
                        <!--                            android:layout_height="25dip"-->
                        <!--                            android:layout_weight="1"-->
                        <!--                            android:layout_margin="@dimen/text_margin_very_small"-->
                        <!--                            app:srcCompat="@drawable/ic_pokeball" />-->
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/image_header"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dip"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_question_mark" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.otaliastudios.zoom.ZoomLayout
            android:id="@+id/zoom_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dip"
            android:scrollbars="vertical|horizontal"
            app:hasClickableChildren="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.otaliastudios.zoom.ZoomLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>